# Meteor-Bot

./: .gitignore  Dockerfile  README.md  lists.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/: lists.py  main.py
src/meteor_bot/: db.json  hitlist.txt  lists.py  main.py
